# RTTIMeta

./: .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: rttimeta_benchmark.cpp  staticCast_benchmark.cpp  virtualInhCast_benchmark.cpp
documentation/: CMakeLists.txt
include/rttimeta/: constexprString.h  rttimeta.h  typename.h
test/: CMakeLists.txt
test/source/: rttimeta_test.cpp
